--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "DOM",
   "version": "1.0.0",
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/mocks/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/src/mocks/fileMock.js"
+    }
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -32,6 +39,7 @@
     "html-webpack-plugin": "^4.5.1",
     "jest": "^28.1.1",
     "jest-babel": "^1.0.1",
+    "jest-environment-jsdom": "^28.1.2",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
